All parks page info and pictures uploaded

--- a/index.html
+++ b/index.html
@@ -22,12 +22,28 @@
       </div>
     </header>
     <nav class="navbar">
-      <a href="parks/isle_royale/isle_royale.html">Isle Royal</a>
-      <a href="parks/keweenaw/keweenaw.html">Keweenaw</a>
-      <a href="parks/river_raisin/river_raisin.html">River Raisin</a>
-      <a href="parks/pictured_rocks/pictured_rocks.html">Pictured Rocks</a>
-      <a href="parks/sleeping_bear/sleeping_bear.html">Sleeping Bear</a>
-      <a href="parks/north_country/north_country.html">North Country</a>
+      <a href="parks/isle_royale_national_park/isle_royale_national_park.html"
+        >Isle Royal</a
+      >
+      <a
+        href="parks/keweenaw_national_historical_park/keweenaw_national_historical_park.html"
+        >Keweenaw</a
+      >
+      <a
+        href="parks/river_raisin_national_battlefield_park/river_raisin_national_battlefield_park.html"
+        >River Raisin</a
+      >
+      <a
+        href="parks/pictured_rocks_national_lakeshore/pictured_rocks_national_lakeshore.html"
+        >Pictured Rocks</a
+      >
+      <a
+        href="parks/sleeping_bear_dunes_national_lakeshore/sleeping_bear_dunes_national_lakeshore.html"
+        >Sleeping Bear</a
+      >
+      <a href="parks/north_country_trail/north_country_trail.html"
+        >North Country</a
+      >
     </nav>
     <main class="content">
       <h1>National Parks</h1>
