Started Styling and Added Navbars for moblie vs desktop view

--- a/parks/isle_royale_national_park/isle_royale_national_park.html
+++ b/parks/isle_royale_national_park/isle_royale_national_park.html
@@ -14,10 +14,11 @@
           src="../../images/Coat_of_arms_of_Michigan.svg"
           alt="Michigan State Flag"
         />
-        <a href="../../index.html">Michigan National Parks</a>
+        <a href="../../index.html">Michigan's National Parks</a>
+        <button id="menu-toggle" aria-label="Toggle Navigation Menu">☰</button>
       </div>
     </header>
-    <nav class="navbar">
+    <nav id="navbar" class="navbar">
       <a href="../isle_royale_national_park/isle_royale_national_park.html"
         >Isle Royal</a
       >
@@ -142,6 +143,7 @@
       </section>
     </main>
     <footer></footer>
+    <script src="../../js/nav.js"></script>
     <script src="../../js/gallery.js"></script>
   </body>
 </html>
