Finished header for mobile view. More styling for index mobile view

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/index.css" />
-
-    <script src="https://cdn.jsdelivr.net/gh/mpetazzoni/leaflet-gpx@1.7.0/gpx.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   </head>
   <body>
@@ -28,22 +26,22 @@
       >
       <a
         href="parks/keweenaw_national_historical_park/keweenaw_national_historical_park.html"
-        >Keweenaw</a
+        >Keweenaw National Park</a
       >
       <a
         href="parks/river_raisin_national_battlefield_park/river_raisin_national_battlefield_park.html"
-        >River Raisin</a
+        >River Raisin Battlefield Park</a
       >
       <a
         href="parks/pictured_rocks_national_lakeshore/pictured_rocks_national_lakeshore.html"
-        >Pictured Rocks</a
+        >Pictured Rocks National Lakershore</a
       >
       <a
         href="parks/sleeping_bear_dunes_national_lakeshore/sleeping_bear_dunes_national_lakeshore.html"
-        >Sleeping Bear</a
+        >Sleeping Bear National Lakeshore</a
       >
       <a href="parks/north_country_trail/north_country_trail.html"
-        >North Country</a
+        >North Country Trail</a
       >
     </nav>
     <main class="content">
