Updated some styling to remove wave error for empty h2 tag in parks

--- a/parks/isle_royale_national_park/isle_royale_national_park.html
+++ b/parks/isle_royale_national_park/isle_royale_national_park.html
@@ -44,8 +44,7 @@
     </nav>
     <main>
       <div><h1>Isle Royale National Park</h1></div>
-      <section>
-        <h2></h2>
+      <section id="top-section">
         <p>A pristine wilderness gem tucked away in the depths of Lake Superior known for its rugged beauty, Isle Royale is a haven for adventurers seeking solitude and a connection with nature. This remote island park is accessible only by boat or seaplane, and with its lush trails, serene waterways, and fascinating ecosystem of wolves and moose, Isle Royale is a naturalist's paradise. Whether you're a backpacker, kayaker, or simply a seeker of tranquility, the park promises an unforgettable experience surrounded by the raw beauty of Michigan’s Upper Peninsula.</p>
       </section>
       <section>
