--- a/parks/keweenaw_national_historical_park/keweenaw_national_historical_park.html
+++ b/parks/keweenaw_national_historical_park/keweenaw_national_historical_park.html
@@ -44,8 +44,7 @@
     </nav>
     <main>
       <div><h1>Keweenaw National Historical Park</h1></div>
-      <section>
-        <h2></h2>
+      <section id="top-section">
         <p>Located in Michigan’s Upper Peninsula, this park preserves and celebrates the rich history of America’s first major copper mining region. Known as 'Copper Country,' this area was once the heart of a booming industry that shaped the local culture, economy, and landscape. Visitors to the park can explore historic mining sites, engage with the stories of immigrant communities, and marvel at the engineering feats that made Keweenaw a cornerstone of industrial America.</p>
       </section>
       <section>
