--- a/parks/north_country_trail/north_country_trail.html
+++ b/parks/north_country_trail/north_country_trail.html
@@ -44,8 +44,7 @@
     </nav>
     <main>
       <div><h1>North Country Trail</h1></div>
-      <section>
-        <h2></h2>
+      <section id="top-section">
         <p>The North Country National Scenic Trail (NCT) is a hiking trail that spans an impressive 4,800 miles across eight states, from Vermont to North Dakota. In Michigan, the trail stretches over 1,100 miles, offering hikers the chance to experience the state’s diverse landscapes, including serene forests, rugged shorelines, and rolling hills. Whether you're seeking a short day hike or a multi-day backpacking adventure, the NCT provides an unparalleled opportunity to connect with Michigan’s natural beauty.</p>
       </section>
       <section>
