--- a/parks/pictured_rocks_national_lakeshore/pictured_rocks_national_lakeshore.html
+++ b/parks/pictured_rocks_national_lakeshore/pictured_rocks_national_lakeshore.html
@@ -44,8 +44,7 @@
     </nav>
     <main>
       <div><h1>Pictured Rocks National Lakeshore</h1></div>
-      <section>
-        <h2></h2>
+      <section id="top-section">
         <p>Pictured Rocks National Lakeshore, located along the southern shore of Lake Superior in Michigan’s Upper Peninsula, is a breathtaking destination known for its colorful sandstone cliffs, pristine beaches, and dramatic waterfalls. Spanning over 40 miles of shoreline, the park offers a perfect blend of natural beauty and outdoor adventure. Visitors can explore crystal-clear waters, hike through lush forests, and marvel at the striking rock formations that give the park its name.</p>
       </section>
       <section>
