--- a/parks/river_raisin_national_battlefield_park/river_raisin_national_battlefield_park.html
+++ b/parks/river_raisin_national_battlefield_park/river_raisin_national_battlefield_park.html
@@ -44,8 +44,7 @@
     </nav>
     <main>
       <div><h1>River Raisin National Battlefield Park</h1></div>
-      <section>
-        <h2></h2>
+      <section id="top-section">
         <p>River Raisin National Battlefield Park, located in Monroe, Michigan, commemorates the pivotal events of the War of 1812. The site preserves the memory of the Battle of the River Raisin, a tragic yet significant moment in American history. Known for the rallying cry “Remember the Raisin,” the park honors the sacrifices of those who fought while educating visitors about the war’s impact on the nation. With interactive exhibits, historic grounds, and engaging programs, the park is a meaningful destination for history enthusiasts and families alike.</p>
       </section>
       <section>
