--- a/parks/sleeping_bear_dunes_national_lakeshore/sleeping_bear_dunes_national_lakeshore.html
+++ b/parks/sleeping_bear_dunes_national_lakeshore/sleeping_bear_dunes_national_lakeshore.html
@@ -44,8 +44,7 @@
     </nav>
     <main>
       <div><h1>Sleeping Bear Dunes National Lakeshore</h1></div>
-      <section>
-        <h2></h2>
+      <section id="top-section">
         <p>Sleeping Bear Dunes National Lakeshore, located along the northeastern shore of Lake Michigan in Michigan’s Lower Peninsula, is a natural wonder celebrated for its towering sand dunes, crystal-clear waters, and lush forests. Spanning 35 miles of coastline, the park offers breathtaking views of Lake Michigan, serene inland lakes, and charming historic villages. A favorite destination for outdoor enthusiasts and families alike, Sleeping Bear Dunes is a perfect place to hike, swim, and immerse yourself in Michigan’s natural beauty.</p>
       </section>
       <section>
