--- a/python/template.html
+++ b/python/template.html
@@ -44,8 +44,7 @@
     </nav>
     <main>
       <div><h1>{{ park.name }}</h1></div>
-      <section>
-        <h2></h2>
+      <section id="top-section">
         <p>{{ park.overview }}</p>
       </section>
       <section>
