header and nav working for desktop and mobile views

--- a/parks/isle_royale_national_park/isle_royale_national_park.html
+++ b/parks/isle_royale_national_park/isle_royale_national_park.html
@@ -9,39 +9,38 @@
   </head>
   <body>
     <header>
-      <div>
-        <img
-          src="../../images/Coat_of_arms_of_Michigan.svg"
-          alt="Michigan State Flag"
-        />
-        <a href="../../index.html">Michigan's National Parks</a>
-        <button id="menu-toggle" aria-label="Toggle Navigation Menu">☰</button>
-      </div>
+      <img
+        class="item1"
+        src="../../images/Coat_of_arms_of_Michigan.svg"
+        alt="Michigan State Flag"
+      />
+      <a class="item2" href="../../index.html">Michigan's National Parks</a>
+      <nav id="navbar" class="navbar">
+        <a href="../isle_royale_national_park/isle_royale_national_park.html"
+          >Isle Royal</a
+        >
+        <a
+          href="../keweenaw_national_historical_park/keweenaw_national_historical_park.html"
+          >Keweenaw National Park</a
+        >
+        <a
+          href="../river_raisin_national_battlefield_park/river_raisin_national_battlefield_park.html"
+          >River Raisin Battlefield Park</a
+        >
+        <a
+          href="../pictured_rocks_national_lakeshore/pictured_rocks_national_lakeshore.html"
+          >Pictured Rocks National Lakershore</a
+        >
+        <a
+          href="../sleeping_bear_dunes_national_lakeshore/sleeping_bear_dunes_national_lakeshore.html"
+          >Sleeping Bear National Lakeshore</a
+        >
+        <a href="../north_country_trail/north_country_trail.html"
+          >North Country Trail</a
+        >
+      </nav>
+      <button id="menu-toggle" aria-label="Toggle Navigation Menu">☰</button>
     </header>
-    <nav id="navbar" class="navbar">
-      <a href="../isle_royale_national_park/isle_royale_national_park.html"
-        >Isle Royal</a
-      >
-      <a
-        href="../keweenaw_national_historical_park/keweenaw_national_historical_park.html"
-        >Keweenaw</a
-      >
-      <a
-        href="../river_raisin_national_battlefield_park/river_raisin_national_battlefield_park.html"
-        >River Raisin</a
-      >
-      <a
-        href="../pictured_rocks_national_lakeshore/pictured_rocks_national_lakeshore.html"
-        >Pictured Rocks</a
-      >
-      <a
-        href="../sleeping_bear_dunes_national_lakeshore/sleeping_bear_dunes_national_lakeshore.html"
-        >Sleeping Bear</a
-      >
-      <a href="../north_country_trail/north_country_trail.html"
-        >North Country</a
-      >
-    </nav>
     <main>
       <div><h1>Isle Royale National Park</h1></div>
       <section id="top-section">
