--- a/index.html
+++ b/index.html
@@ -11,39 +11,38 @@
   </head>
   <body>
     <header>
-      <div>
-        <img
-          src="images/Coat_of_arms_of_Michigan.svg"
-          alt="Michigan State Flag"
-        />
-        <a href="index.html">Michigan's National Parks</a>
-        <button id="menu-toggle" aria-label="Toggle Navigation Menu">☰</button>
-      </div>
+      <img
+        class="item1"
+        src="images/Coat_of_arms_of_Michigan.svg"
+        alt="Michigan State Flag"
+      />
+      <a class="item2" href="index.html">Michigan's National Parks</a>
+      <nav id="navbar" class="navbar">
+        <a href="parks/isle_royale_national_park/isle_royale_national_park.html"
+          >Isle Royal</a
+        >
+        <a
+          href="parks/keweenaw_national_historical_park/keweenaw_national_historical_park.html"
+          >Keweenaw National Park</a
+        >
+        <a
+          href="parks/river_raisin_national_battlefield_park/river_raisin_national_battlefield_park.html"
+          >River Raisin Battlefield Park</a
+        >
+        <a
+          href="parks/pictured_rocks_national_lakeshore/pictured_rocks_national_lakeshore.html"
+          >Pictured Rocks National Lakershore</a
+        >
+        <a
+          href="parks/sleeping_bear_dunes_national_lakeshore/sleeping_bear_dunes_national_lakeshore.html"
+          >Sleeping Bear National Lakeshore</a
+        >
+        <a href="parks/north_country_trail/north_country_trail.html"
+          >North Country Trail</a
+        >
+      </nav>
+      <button id="menu-toggle" aria-label="Toggle Navigation Menu">☰</button>
     </header>
-    <nav id="navbar" class="navbar">
-      <a href="parks/isle_royale_national_park/isle_royale_national_park.html"
-        >Isle Royal</a
-      >
-      <a
-        href="parks/keweenaw_national_historical_park/keweenaw_national_historical_park.html"
-        >Keweenaw National Park</a
-      >
-      <a
-        href="parks/river_raisin_national_battlefield_park/river_raisin_national_battlefield_park.html"
-        >River Raisin Battlefield Park</a
-      >
-      <a
-        href="parks/pictured_rocks_national_lakeshore/pictured_rocks_national_lakeshore.html"
-        >Pictured Rocks National Lakershore</a
-      >
-      <a
-        href="parks/sleeping_bear_dunes_national_lakeshore/sleeping_bear_dunes_national_lakeshore.html"
-        >Sleeping Bear National Lakeshore</a
-      >
-      <a href="parks/north_country_trail/north_country_trail.html"
-        >North Country Trail</a
-      >
-    </nav>
     <main class="content">
       <h1>Michigan's Six Parks</h1>
       <section id="map"></section>
@@ -71,7 +70,6 @@
         </p>
       </section>
     </main>
-    <footer></footer>
 
     <script src="js/nav.js"></script>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
