--- a/parks/isle_royale_national_park/isle_royale_national_park.html
+++ b/parks/isle_royale_national_park/isle_royale_national_park.html
@@ -86,7 +86,7 @@
         
       </section>
     </main>
-    <footer></footer>
+    <footer>@ 2024 Noah Pavlawk</footer>
     <script src="../../js/nav.js"></script>
     <script src="../../js/gallery.js"></script>
   </body>
