--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         </p>
       </section>
     </main>
+    <footer>@ 2024 Noah Pavlawk</footer>
 
     <script src="js/nav.js"></script>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
