--- a/parks/pictured_rocks_national_lakeshore/pictured_rocks_national_lakeshore.html
+++ b/parks/pictured_rocks_national_lakeshore/pictured_rocks_national_lakeshore.html
@@ -84,7 +84,7 @@
         
       </section>
     </main>
-    <footer></footer>
+    <footer>@ 2024 Noah Pavlawk</footer>
     <script src="../../js/nav.js"></script>
     <script src="../../js/gallery.js"></script>
   </body>
