--- a/parks/sleeping_bear_dunes_national_lakeshore/sleeping_bear_dunes_national_lakeshore.html
+++ b/parks/sleeping_bear_dunes_national_lakeshore/sleeping_bear_dunes_national_lakeshore.html
@@ -88,7 +88,7 @@
         
       </section>
     </main>
-    <footer></footer>
+    <footer>@ 2024 Noah Pavlawk</footer>
     <script src="../../js/nav.js"></script>
     <script src="../../js/gallery.js"></script>
   </body>
