--- a/python/template.html
+++ b/python/template.html
@@ -70,7 +70,7 @@
         {% endfor %}
       </section>
     </main>
-    <footer></footer>
+    <footer>@ 2024 Noah Pavlawk</footer>
     <script src="../../js/nav.js"></script>
     <script src="../../js/gallery.js"></script>
   </body>
